Fixed queue overflowing.

--- a/styles.css
+++ b/styles.css
@@ -666,7 +666,6 @@ select {
     margin: 0;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
     flex: 10;
 }
 
